fixed some bleeding between components

--- a/src/Components/CreateAccount/createAccount.css
+++ b/src/Components/CreateAccount/createAccount.css
@@ -5,6 +5,7 @@
     display: flex;
     padding: 10% 5%;
     flex-direction: column;
+    
 }
 
 .createInputsDiv {
@@ -34,34 +35,35 @@
 .createButtons {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin: 10% 0 0 0;
     
 }
 
 @media screen and (min-width: 1040px) {
-    * {
+    /* * {
         font-size: 25px;
-    }
+
+    } */
     .createButtons{
         margin: 3%;
     }
-    img {
+    #adminImg, #adminImgHolder {
         width: 33%;
     }
 }
 
 @media screen and (min-width: 415px) and (max-width: 1039px){
-    * {
+    /* * {
         font-size: 36px;
-    }
+    } */
     .createButtons {
         margin: 4% 0 0 0;
     }
-    button {
+    #createAccountButtons {
         font-size: 25px;
     }
-    img {
+    #adminImg, #adminImgHolder {
         width: 43%;
     }
     
@@ -69,7 +71,7 @@
 }
 
 @media screen and (max-width: 375px){
-    button {
+    #createAccountButtons {
         font-size: 12px; 
     }
     .createButtons {
@@ -78,7 +80,7 @@
     .createAccount {
         padding: 10% 5% 0 5%;
     }
-    img {
+    #adminImg, #adminImgHolder {
         width: 63%;
         
     }
