--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -126,8 +126,8 @@
         justify-items: end;
 
         /* margin-left: 55px; */
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
     }
     /* 
     #loggedInLogo {
